<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Actividades IZV</string>
    <string name="action_add">+</string>
    <string name="title_activity_formulario">Nueva Actividad</string>

    <array name="actividades">
        <item>Extraescolar</item>
        <item>Complementaria</item>
    </array>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="et_prof">Profesores</string>
    <string name="et_dep">Departamento</string>
    <string name="et_grup">Grupos</string>
    <string name="et_desc">Descripcion Actividad</string>
    <string name="et_fecha">Fecha</string>
    <string name="et_lugar">Lugar</string>
    <string name="et_ls">Lugar Salida</string>
    <string name="et_lr">Lugar Regreso</string>
    <string name="et_fi">Fecha Inicio</string>
    <string name="et_ff">Fecha Fin</string>
    <string name="et_hi">Hora Inicio</string>
    <string name="et_hf">Hora Fin</string>
    <string name="bt_ok">Aceptar</string>
    <string name="menu_delete">Eliminar</string>
    <string name="menu_edit">Editar</string>

    <string-array name="profesores">
        <item>Profesor</item>
        <item>profe 1</item>
        <item>profe 2</item>
        <item>profe 3</item>
    </string-array>
    <string-array name="grupos">
        <item>Grupo</item>
        <item>grupo 1</item>
        <item>grupo 2</item>
        <item>grupo 3</item>
    </string-array>

    <string name="title_activity_detail_view">DetailView</string>

</resources>
